--- a/Plot/output_tables.tex
+++ b/Plot/output_tables.tex
@@ -4,11 +4,10 @@
 \section*{Results for dataset: TrainDay0123_TestDay4, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0123_TestDay4}, flow samples: flows}
-\label{tab:trainday0123testday4_flows}
+\caption{Results for dataset TrainDay0123_TestDay4, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & - & - & - & - & - & - & - & - & - \\
 OneClassForestwoBootstrap & 0h 0m 28s & 0h 0m 1s & 0.8127 & 0.7960 & 0.6377 & 1 & 1 & 1 & 2 \\
@@ -27,11 +26,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.5490 & 0.4522 & 0.4993 & 5 & 4 & 5 & 8 \\
 \section*{Results for dataset: TrainDay012_TestDay34, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay012_TestDay34}, flow samples: flows}
-\label{tab:trainday012testday34_flows}
+\caption{Results for dataset TrainDay012_TestDay34, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 57m 3s & 0h 0m 1s & 0.8293 & 0.4404 & 0.5047 & 2 & 3 & 4 & 6 \\
 OneClassForestwoBootstrap & 0h 0m 26s & 0h 0m 1s & 0.6784 & 0.6273 & 0.6237 & 30 & 2 & 2 & 3 \\
@@ -50,11 +48,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.6562 & 0.3448 & 0.4994 & 3 & 6 & 8 & 12 \\
 \section*{Results for dataset: TrainDay01_TestDay234, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay01_TestDay234}, flow samples: flows}
-\label{tab:trainday01testday234_flows}
+\caption{Results for dataset TrainDay01_TestDay234, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 26m 9s & 0h 0m 1s & 0.8260 & 0.4650 & 0.5054 & 13 & 3 & 4 & 5 \\
 OneClassForestwoBootstrap & 0h 0m 13s & 0h 0m 2s & 0.9333 & 0.7872 & 0.8633 & 26 & 2 & 2 & 3 \\
@@ -73,11 +70,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.6496 & 0.3530 & 0.5002 & 1 & 6 & 7 & 11 \\
 \section*{Results for dataset: TrainDay0_DDos, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_DDos}, flow samples: flows}
-\label{tab:trainday0ddos_flows}
+\caption{Results for dataset TrainDay0_DDos, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.6395 & 0.3604 & 0.5000 & 29 & 3 & 4 & 6 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.7257 & 0.8996 & 0.7983 & 24 & 1 & 2 & 2 \\
@@ -96,11 +92,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.3128 & 0.6975 & 0.4984 & 4 & 2 & 3 & 4 \\
 \section*{Results for dataset: TrainDay0_Dos, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Dos}, flow samples: flows}
-\label{tab:trainday0dos_flows}
+\caption{Results for dataset TrainDay0_Dos, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7053 & 0.2947 & 0.5000 & 20 & 4 & 5 & 7 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.5559 & 0.6076 & 0.5162 & 9 & 3 & 3 & 5 \\
@@ -119,11 +114,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.4095 & 0.5961 & 0.5010 & 2 & 3 & 4 & 6 \\
 \section*{Results for dataset: TrainDay0_FTPPatator, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_FTPPatator}, flow samples: flows}
-\label{tab:trainday0ftppatator_flows}
+\caption{Results for dataset TrainDay0_FTPPatator, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 19s & 0h 0m 0s & 0.9835 & 0.0165 & 0.5000 & 190 & 85 & 110 & 169 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9976 & 0.1697 & 0.9316 & 117 & 11 & 14 & 21 \\
@@ -142,11 +136,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9735 & 0.0298 & 0.5037 & 495 & 69 & 90 & 137 \\
 \section*{Results for dataset: TrainDay0_Heartbleed, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Heartbleed}, flow samples: flows}
-\label{tab:trainday0heartbleed_flows}
+\caption{Results for dataset TrainDay0_Heartbleed, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9999 & 0.0000 & 0.5000 & 1338 & 201 & 201 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9999 & 0.0000 & 0.9903 & 113 & 201 & 201 & 201 \\
@@ -165,11 +158,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9996 & 0.0000 & 0.4847 & 8786 & 201 & 201 & 201
 \section*{Results for dataset: TrainDay0_Infiltration, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Infiltration}, flow samples: flows}
-\label{tab:trainday0infiltration_flows}
+\caption{Results for dataset TrainDay0_Infiltration, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7988 & 0.4826 & 0.5459 & 5 & 3 & 3 & 5 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9560 & 0.7825 & 0.9125 & 2 & 2 & 3 & 4 \\
@@ -188,11 +180,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.5895 & 0.4192 & 0.5015 & 1 & 5 & 6 & 10 \\
 \section*{Results for dataset: TrainDay0_PortScan, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_PortScan}, flow samples: flows}
-\label{tab:trainday0portscan_flows}
+\caption{Results for dataset TrainDay0_PortScan, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.6150 & 0.3850 & 0.5000 & 2 & 2 & 3 & 4 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9512 & 0.9804 & 0.9654 & 1 & 1 & 1 & 2 \\
@@ -211,11 +202,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.2228 & 0.7842 & 0.5013 & 1 & 2 & 3 & 4 \\
 \section*{Results for dataset: TrainDay0_SSHPatator, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_SSHPatator}, flow samples: flows}
-\label{tab:trainday0sshpatator_flows}
+\caption{Results for dataset TrainDay0_SSHPatator, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 22s & 0h 0m 0s & 0.9864 & 0.0136 & 0.5000 & 3708 & 142 & 184 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9858 & 0.0137 & 0.5032 & 35 & 50 & 65 & 100 \\
@@ -234,11 +224,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9790 & 0.0244 & 0.5005 & 2357 & 84 & 109 & 167 
 \section*{Results for dataset: TrainDay0_TestBotnet, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_TestBotnet}, flow samples: flows}
-\label{tab:trainday0testbotnet_flows}
+\caption{Results for dataset TrainDay0_TestBotnet, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.9952 & 0.0048 & 0.5000 & 797 & 201 & 201 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9948 & 0.0101 & 0.5099 & 66 & 201 & 201 & 201 \\
@@ -257,11 +246,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9900 & 0.0091 & 0.4905 & 320 & 201 & 201 & 201 
 \section*{Results for dataset: TrainDay0_TestDay1234, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_TestDay1234}, flow samples: flows}
-\label{tab:trainday0testday1234_flows}
+\caption{Results for dataset TrainDay0_TestDay1234, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.8569 & 0.1431 & 0.5000 & 9 & 7 & 9 & 14 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 1s & 0.9260 & 0.6684 & 0.8131 & 253 & 2 & 3 & 4 \\
@@ -280,11 +268,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.7114 & 0.2895 & 0.4991 & 3 & 7 & 9 & 14 \\
 \section*{Results for dataset: TrainDay0_Web, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Web}, flow samples: flows}
-\label{tab:trainday0web_flows}
+\caption{Results for dataset TrainDay0_Web, flow samples: flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9850 & 0.0150 & 0.5000 & 4305 & 121 & 158 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9818 & 0.0305 & 0.5404 & 150 & 72 & 93 & 143 \\
@@ -303,11 +290,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9723 & 0.0273 & 0.4946 & 418 & 77 & 100 & 153 \
 \section*{Results for dataset: TrainDay0123_TestDay4, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0123_TestDay4}, flow samples: samples}
-\label{tab:trainday0123testday4_samples}
+\caption{Results for dataset TrainDay0123_TestDay4, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & - & - & - & - & - & - & - & - & - \\
 OneClassForestwoBootstrap & 0h 0m 28s & 0h 0m 1s & 0.8442 & 0.7219 & 0.5901 & 1 & 1 & 1 & 2 \\
@@ -326,11 +312,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.6468 & 0.3544 & 0.4995 & 1 & 6 & 7 & 11 \\
 \section*{Results for dataset: TrainDay012_TestDay34, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay012_TestDay34}, flow samples: samples}
-\label{tab:trainday012testday34_samples}
+\caption{Results for dataset TrainDay012_TestDay34, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 57m 3s & 0h 0m 1s & 0.8791 & 0.1209 & 0.5000 & 2 & 5 & 6 & 9 \\
 OneClassForestwoBootstrap & 0h 0m 26s & 0h 0m 1s & 0.7878 & 0.4464 & 0.5270 & 60 & 2 & 2 & 3 \\
@@ -349,11 +334,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.7588 & 0.2413 & 0.4992 & 2 & 9 & 11 & 17 \\
 \section*{Results for dataset: TrainDay01_TestDay234, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay01_TestDay234}, flow samples: samples}
-\label{tab:trainday01testday234_samples}
+\caption{Results for dataset TrainDay01_TestDay234, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 26m 9s & 0h 0m 1s & 0.8761 & 0.1239 & 0.5000 & 80 & 4 & 6 & 8 \\
 OneClassForestwoBootstrap & 0h 0m 13s & 0h 0m 2s & 0.9343 & 0.6408 & 0.7882 & 98 & 3 & 3 & 5 \\
@@ -372,11 +356,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.7536 & 0.2481 & 0.5002 & 4 & 9 & 11 & 17 \\
 \section*{Results for dataset: TrainDay0_DDos, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_DDos}, flow samples: samples}
-\label{tab:trainday0ddos_samples}
+\caption{Results for dataset TrainDay0_DDos, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.6307 & 0.3692 & 0.5000 & 7 & 3 & 4 & 6 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.6434 & 0.8619 & 0.6655 & 120 & 1 & 2 & 2 \\
@@ -395,11 +378,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.2639 & 0.7375 & 0.4988 & 1 & 2 & 3 & 4 \\
 \section*{Results for dataset: TrainDay0_Dos, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Dos}, flow samples: samples}
-\label{tab:trainday0dos_samples}
+\caption{Results for dataset TrainDay0_Dos, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7657 & 0.2343 & 0.5000 & 47 & 8 & 10 & 15 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.6473 & 0.5097 & 0.5248 & 33 & 3 & 4 & 6 \\
@@ -418,11 +400,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.5342 & 0.4690 & 0.5002 & 2 & 4 & 5 & 8 \\
 \section*{Results for dataset: TrainDay0_FTPPatator, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_FTPPatator}, flow samples: samples}
-\label{tab:trainday0ftppatator_samples}
+\caption{Results for dataset TrainDay0_FTPPatator, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 19s & 0h 0m 0s & 0.9713 & 0.0287 & 0.5000 & 47 & 86 & 111 & 171 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9759 & 0.2117 & 0.6225 & 94 & 7 & 10 & 14 \\
@@ -441,11 +422,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9427 & 0.0579 & 0.5013 & 43 & 39 & 51 & 78 \\
 \section*{Results for dataset: TrainDay0_Heartbleed, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Heartbleed}, flow samples: samples}
-\label{tab:trainday0heartbleed_samples}
+\caption{Results for dataset TrainDay0_Heartbleed, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9852 & 0.0147 & 0.4999 & 83 & 201 & 201 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9893 & 0.2557 & 0.6506 & 233 & 17 & 21 & 33 \\
@@ -464,11 +444,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9696 & 0.0296 & 0.5034 & 24 & 78 & 101 & 155 \\
 \section*{Results for dataset: TrainDay0_Infiltration, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Infiltration}, flow samples: samples}
-\label{tab:trainday0infiltration_samples}
+\caption{Results for dataset TrainDay0_Infiltration, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.8908 & 0.3594 & 0.5583 & 4 & 4 & 5 & 7 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9771 & 0.6627 & 0.9161 & 2 & 3 & 4 & 5 \\
@@ -487,11 +466,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.7714 & 0.2317 & 0.5009 & 8 & 9 & 12 & 18 \\
 \section*{Results for dataset: TrainDay0_PortScan, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_PortScan}, flow samples: samples}
-\label{tab:trainday0portscan_samples}
+\caption{Results for dataset TrainDay0_PortScan, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.7084 & 0.6249 & 0.5000 & 1 & 3 & 4 & 6 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9693 & 0.9511 & 0.9639 & 1 & 1 & 2 & 2 \\
@@ -510,11 +488,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.4198 & 0.5837 & 0.4999 & 1 & 3 & 4 & 6 \\
 \section*{Results for dataset: TrainDay0_SSHPatator, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_SSHPatator}, flow samples: samples}
-\label{tab:trainday0sshpatator_samples}
+\caption{Results for dataset TrainDay0_SSHPatator, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 22s & 0h 0m 0s & 0.9574 & 0.0426 & 0.5000 & 8220 & 52 & 68 & 104 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9571 & 0.0428 & 0.5022 & 73 & 43 & 56 & 86 \\
@@ -533,11 +510,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9152 & 0.0848 & 0.5001 & 1 & 26 & 34 & 52 \\
 \section*{Results for dataset: TrainDay0_TestBotnet, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_TestBotnet}, flow samples: samples}
-\label{tab:trainday0testbotnet_samples}
+\caption{Results for dataset TrainDay0_TestBotnet, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.9969 & 0.0031 & 0.5000 & 343 & 201 & 201 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9967 & 0.0075 & 0.5190 & 22 & 201 & 201 & 201 \\
@@ -556,11 +532,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9932 & 0.0061 & 0.4904 & 8 & 201 & 201 & 201 \\
 \section*{Results for dataset: TrainDay0_TestDay1234, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_TestDay1234}, flow samples: samples}
-\label{tab:trainday0testday1234_samples}
+\caption{Results for dataset TrainDay0_TestDay1234, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.8976 & 0.1024 & 0.5000 & 37 & 9 & 12 & 18 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 1s & 0.9312 & 0.4944 & 0.7388 & 388 & 4 & 4 & 7 \\
@@ -579,11 +554,10 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.7957 & 0.2048 & 0.4992 & 2 & 11 & 14 & 21 \\
 \section*{Results for dataset: TrainDay0_Web, samples}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_Web}, flow samples: samples}
-\label{tab:trainday0web_samples}
+\caption{Results for dataset TrainDay0_Web, flow samples: samples}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
 \midrule
 OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9774 & 0.0226 & 0.5000 & 10613 & 131 & 170 & 201 \\
 OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9732 & 0.0450 & 0.5363 & 351 & 47 & 62 & 94 \\
@@ -598,5 +572,66 @@ Random & 0h 0m 0s & 0h 0m 0s & 0.9539 & 0.0444 & 0.4961 & 44 & 51 & 66 & 101 \\
 \bottomrule
 \end{tabular}
 \end{table}
+
+\begin{table*}[t]
+\centering
+\caption{Sample score results for day datasets}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+TrainDay0\_TestDay1234 & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
+\midrule
+OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.8976 & 0.1024 & 0.5000 & 37 & 9 & 12 & 18 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 1s & 0.9312 & 0.4944 & 0.7388 & 388 & 4 & 4 & 7 \\
+IsolationForest & 0h 1m 13s & 0h 0m 47s & 0.9700 & 0.8806 & 0.9437 & 27 & 9 & 11 & 17 \\
+NeuronalNetworkLoss & 0h 24m 55s & 0h 0m 12s & 0.9127 & 0.4152 & 0.7261 & 1 & 10 & 13 & 20 \\
+NeuronalNetwork & 0h 20m 20s & 0h 0m 2s & 0.8926 & 0.2928 & 0.4779 & 1 & 2 & 3 & 4 \\
+OneClassSVN & 0h 1m 34s & 0h 1m 2s & 0.9668 & 0.7171 & 0.8277 & 1 & 4 & 6 & 8 \\
+EnergyFlowClassifier & 0h 17m 46s & 0h 0m 23s & 0.8442 & 0.4414 & 0.6217 & 1 & 10 & 13 & 20 \\
+DistanceLOF & 0h 1m 48s & 0h 41m 11s & 0.9351 & 0.4204 & 0.7808 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 11s & 0h 27m 2s & 0.9020 & 0.3118 & 0.6865 & 433 & 4 & 5 & 7 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7957 & 0.2048 & 0.4992 & 2 & 11 & 14 & 21 \\
+\midrule
+TrainDay01\_TestDay234 & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
+\midrule
+OneClassForest & 0h 26m 9s & 0h 0m 1s & 0.8761 & 0.1239 & 0.5000 & 80 & 4 & 6 & 8 \\
+OneClassForestwoBootstrap & 0h 0m 13s & 0h 0m 2s & 0.9343 & 0.6408 & 0.7882 & 98 & 3 & 3 & 5 \\
+IsolationForest & 0h 2m 19s & 0h 1m 37s & 0.9890 & 0.9168 & 0.9736 & 11 & 7 & 9 & 13 \\
+NeuronalNetworkLoss & 0h 48m 11s & 0h 0m 10s & 0.8976 & 0.4997 & 0.7482 & 1 & 8 & 11 & 16 \\
+NeuronalNetwork & 0h 39m 41s & 0h 0m 1s & 0.6280 & 0.1569 & 0.2051 & 17 & 9 & 12 & 18 \\
+OneClassSVN & 0h 7m 3s & 0h 1m 30s & 0.9145 & 0.4623 & 0.5386 & 1 & 4 & 5 & 7 \\
+EnergyFlowClassifier & 0h 34m 41s & 0h 0m 41s & 0.8024 & 0.4841 & 0.6211 & 2 & 8 & 11 & 16 \\
+DistanceLOF & 0h 25m 12s & 1h 57m 2s & 0.9212 & 0.5006 & 0.7885 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 22m 6s & 0h 40m 56s & 0.8599 & 0.3653 & 0.6780 & 30 & 5 & 6 & 10 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7536 & 0.2481 & 0.5002 & 4 & 9 & 11 & 17 \\
+\midrule
+TrainDay012\_TestDay34 & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
+\midrule
+OneClassForest & 0h 57m 3s & 0h 0m 1s & 0.8791 & 0.1209 & 0.5000 & 2 & 5 & 6 & 9 \\
+OneClassForestwoBootstrap & 0h 0m 26s & 0h 0m 1s & 0.7878 & 0.4464 & 0.5270 & 60 & 2 & 2 & 3 \\
+IsolationForest & 0h 3m 48s & 0h 1m 38s & 0.9944 & 0.9279 & 0.9840 & 16 & 7 & 9 & 14 \\
+NeuronalNetworkLoss & 1h 19m 40s & 0h 0m 5s & 0.9347 & 0.6345 & 0.8284 & 1 & 8 & 10 & 16 \\
+NeuronalNetwork & 0h 57m 36s & 0h 0m 1s & 0.6627 & 0.1416 & 0.1715 & 307 & 13 & 16 & 25 \\
+OneClassSVN & 0h 6m 9s & 0h 1m 12s & 0.9660 & 0.5012 & 0.6031 & 1 & 3 & 4 & 6 \\
+EnergyFlowClassifier & 0h 58m 5s & 0h 0m 39s & 0.9762 & 0.8692 & 0.9393 & 1 & 8 & 11 & 16 \\
+DistanceLOF & 1h 44m 7s & 2h 6m 6s & 0.9356 & 0.5115 & 0.8071 & 1 & 2 & 3 & 4 \\
+LocalOutlierFactor & 0h 49m 19s & 0h 42m 45s & 0.8046 & 0.2941 & 0.5800 & 35 & 5 & 7 & 10 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7588 & 0.2413 & 0.4992 & 2 & 9 & 11 & 17 \\
+\midrule
+TrainDay0123\_TestDay4 & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & i\_drawn & $\geq 0.9\%$ & $\geq 0.95\%$ & $\geq 0.99\%$ \\
+\midrule
+OneClassForest & - & - & - & - & - & - & - & - & - \\
+OneClassForestwoBootstrap & 0h 0m 28s & 0h 0m 1s & 0.8442 & 0.7219 & 0.5901 & 1 & 1 & 1 & 2 \\
+IsolationForest & 0h 4m 58s & 0h 1m 27s & 0.9897 & 0.9344 & 0.9783 & 3 & 5 & 6 & 9 \\
+NeuronalNetworkLoss & 1h 43m 13s & 0h 0m 3s & 0.8721 & 0.5110 & 0.7449 & 1 & 6 & 7 & 11 \\
+NeuronalNetwork & 1h 9m 4s & 0h 0m 0s & 0.6379 & 0.3006 & 0.3895 & 2 & 6 & 7 & 11 \\
+OneClassSVN & 0h 13m 28s & 0h 0m 58s & 0.9407 & 0.4766 & 0.5196 & 1 & 3 & 3 & 5 \\
+EnergyFlowClassifier & 1h 22m 59s & 0h 0m 29s & 0.9664 & 0.9288 & 0.9495 & 1 & 5 & 7 & 10 \\
+DistanceLOF & 3h 47m 48s & 1h 23m 12s & 0.9037 & 0.6473 & 0.8151 & 1 & 3 & 3 & 5 \\
+LocalOutlierFactor & 1h 23m 9s & 0h 31m 49s & 0.6694 & 0.3875 & 0.5164 & 13 & 4 & 5 & 7 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.6468 & 0.3544 & 0.4995 & 1 & 6 & 7 & 11 \\
+\midrule
+\bottomrule
+\end{tabular}
+\end{table*}
 
 \end{document}
